# docent-dispatch

./: .env.example  .gitignore  .replit  BOOTSTRAP_ADMIN.md  CLAUDE.md  LICENSE  README.md  bootstrap_admin.py  cookies.txt  database-template.yml  package-lock.json  package.json  pytest.ini  requirements.txt  run_python_server.py  start_both_servers.sh  start_dev.sh  start_server.sh  vite.config.ts
.github/workflows/: ci.yml  python-app.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx
client/src/hooks/: use-auth.tsx
infrastructure/: backend-template.yml  core-infra-template.yml  database-template.yml  frontend-template.yml
python_server/: app.py  bootstrap.py  models.py  pyproject.toml  pytest.ini  requirements.txt  routes.py  run_python_server.py  utils.py
python_server/app/: app.py  models.py
python_server/domain/tags/: model.py  repository.py  service.py  tag_model.py  tag_repository.py  tag_service.py
python_server/domain/users/: model.py  repository.py  service.py  user_model.py  user_repository.py  user_service.py
python_server/tests/: conftest.py
python_server/tests/domain/tags/: test_service.py  test_tag_service.py
python_server/tests/domain/users/: test_user_repository.py  test_user_service.py
python_server/tests/integration/: test_admin_functionality.py  test_authentication_flows.py  test_tag_request_lifecycle.py
replit_agent/: architecture.md
scripts/: generate_types.ts
server/: auth.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts  types.ts
(+25 files in other folders)
